fix alignment in Firefox

--- a/src/static/css/_globals.scss
+++ b/src/static/css/_globals.scss
@@ -178,7 +178,7 @@ body > footer {
         @extend .col-lg-3;
         @extend .order-1;
         @extend .order-lg-2;
-        text-align: right;
+        text-align: center;
 
         a:after {
             content: none;
